fix: documentation; fix: no-stretch is now a utility-class as expected

--- a/src/layout/elements/main-section.less
+++ b/src/layout/elements/main-section.less
@@ -27,11 +27,6 @@ fieldset {
     margin-bottom: @default-distance;
   }
 
-  &.no-stretch {
-    justify-content: flex-start;
-    align-items: flex-start;
-  }
-
   // For a modal layout
   &.center {
     justify-content: center;
