--- a/src/utilities/layout-utilities.less
+++ b/src/utilities/layout-utilities.less
@@ -259,3 +259,8 @@
 .overflow-horizontal {
   overflow-x: auto;
 }
+
+.no-stretch {
+  justify-content: flex-start;
+  align-items: flex-start;
+}
